# ApoStudio

./: CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml
nodes/: apo_chat.py  apo_display.py  apo_history.py  apo_load_image.py  apo_prompts.py  apo_unload.py
prompts/system/: assistant.txt  prompt_enhancer.txt  vision_captioner.txt
prompts/user/: describe_image.txt  enhance_prompt.txt
web/js/: apo_display.js
workflows/: ApoStudio Chat v1 [Multi-turn chat with history].json  ApoStudio Image Caption v1 [Single Image Caption].json
